kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: henexapp
  labels:
    app: henexapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: henexapp
  template:
    metadata:
      labels:
        app: henexapp
    spec:
      containers:
      - name: henexapp
        image: henex/henexapp
        ports:
        - name: henexapp-port
          containerPort: 8080
