kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: henexdb
  labels:
    app: henexdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: henexdb
  template:
    metadata:
      labels:
        app: henexdb
    spec:
      containers:
      - name: henexdb
        image: henex/henexdb
        volumemounts:
        - name: henexdb-data
          mountPath: /var/lib/mysql
        ports:
        - name: henexdb-port
          containerPort: 3306
      volumes:
        - name: henexdb-data
          persistentVolumeClaim:
            claimName: db-pvc-claim
