kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: henexapp-service
spec:
  type: ClusterIP
  selector:
    app: henexapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
