kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  labels:
    app: henexmc
spec:
  type: ClusterIP
  selector:
    app: henexmc
  ports:
    - protocol: TCP
      port: 11211
      targetPort: henexmc-port
