kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq01
  labels:
    app: henexrmq
spec:
  type: ClusterIP
  selector:
    app: henexrmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: henexrmq-port
