kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: henex-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: henex.hph-info.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: henexapp-service
            port:
              number: 8080
